--- a/css/header.css
+++ b/css/header.css
@@ -37,6 +37,14 @@
     transform: translateY(0%);
   }
 }
+@keyframes line {
+  from {
+    stroke-dasharray: 502.65482456;
+  }
+  to {
+    stroke-dashoffset: 35.1858377192;
+  }
+}
 header .header_flex {
   display: flex;
   padding-top: 10px;
