--- a/css/index.css
+++ b/css/index.css
@@ -15,6 +15,10 @@
 /*=================톤앤매너=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
+/*=================중단점=================*/
+/*=================톤앤매너=================*/
+/*=================폰트패밀리=================*/
+/*=================여백=================*/
 @keyframes cursor_blink {
   0% {
     opacity: 0;
@@ -39,10 +43,16 @@
 }
 @keyframes line {
   from {
-    stroke-dasharray: 502.65482456;
+    stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
+    @media screen and (min-width: 768px) {
+      stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
+    }
   }
   to {
-    stroke-dashoffset: 35.1858377192;
+    stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 0.07 * 3.1415926535);
+    @media screen and (min-width: 768px) {
+      stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
+    }
   }
 }
 main .main_intro .nyan_1 .first_flex {
@@ -1233,9 +1243,6 @@ main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(even) {
     margin-left: 0;
   }
 }
-main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(n+4) {
-  margin-top: 60px;
-}
 @media screen and (min-width: 768px) {
   main .main_myspecs .my_specs_contents .ms_contents_grp:nth-child(n+4) {
     margin-top: 80px;
@@ -2125,32 +2132,80 @@ main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill {
   width: 33%;
   position: relative;
 }
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill {
+    width: 25%;
+  }
+}
+main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill:nth-child(n+4) {
+  margin-top: 7px;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill:nth-child(n+4) {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill:nth-child(n+5) {
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill:nth-child(n+5) {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill:last-child {
+    display: none;
+  }
+}
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill img {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
+  display: block;
 }
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -46%);
+  transform: translate(-50%, -45%);
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart {
+    transform: translate(-50%, -45%);
+  }
 }
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart {
   position: relative;
 }
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart svg {
-  width: 200px;
-  height: 200px;
+  width: calc(-20px + 30vw);
+  height: calc(-20px + 30vw);
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart svg {
+    width: calc(-10px + 20vw);
+    height: calc(-10px + 20vw);
+  }
 }
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart svg circle {
   fill: transparent;
-  stroke-width: 20;
-  stroke-dasharray: 502.65482456;
-  stroke-dashoffset: 502.65482456;
-  stroke: #bcff04;
+  stroke-width: calc(4px + 1vw);
+  stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
+  stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 3.1415926535);
+  stroke: #e54d26;
   transform: rotate(-90deg);
   transform-origin: center;
   stroke-linecap: round;
   animation: line 3s forwards;
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart svg circle {
+    stroke-width: calc(5px + 1vw);
+    stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
+    stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 3.1415926535);
+  }
 }
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data {
   position: absolute;
@@ -2160,7 +2215,36 @@ main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .c
   text-align: center;
 }
 main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data h4 {
-  font-size: calc(8px + 2vw);
+  font-size: calc(-4px + 4vw);
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data h4 {
+    font-size: calc(4px + 2vw);
+  }
+}
+main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data p {
+  margin-top: 7px;
+  font-size: calc(4px + 4vw);
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data p {
+    margin-top: 10px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data p {
+    margin-top: 12px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data p {
+    margin-top: 15px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_myskills .mk_main .mk_icons .icons_flex .mk_skill .mk_chart .chart .chart_data p {
+    font-size: calc(2px + 3vw);
+  }
 }
 main .main_projects {
   height: 1000px;
