--- a/css/reset.css
+++ b/css/reset.css
@@ -31,32 +31,36 @@ body {
 }
 .under_320 {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  min-height: 100vh;
+}
+@media screen and (min-width: 320px) {
+  .under_320 {
+    display: none;
+  }
 }
 .under_320 .under_320_contents {
   text-align: center;
 }
-@media screen and (min-width: 320px) {
-  .under_320 .under_320_contents {
-    display: none;
-  }
-}
 .under_320 .under_320_contents h2 {
-  font-size: calc(10px + 1vw);
+  font-size: calc(2px + 10vw);
   color: #e87d9e;
 }
 .under_320 .under_320_contents .img_320 {
   width: 50%;
   margin: 0 auto;
+  transform: translateX(10%);
 }
 .under_320 .under_320_contents .img_320 img {
   display: block;
   width: 100%;
+  margin-top: 15px;
 }
 .under_320 .under_320_contents p {
-  font-size: calc(8px + 1vw);
+  font-size: calc(2px + 6vw);
   color: white;
+  line-height: 1.5em;
+  margin-top: 20px;
 }
 
 .bighead {
