--- a/scss/reset.scss
+++ b/scss/reset.scss
@@ -33,35 +33,40 @@ body {
 .under_320 {
 
   display: flex;
-  flex-direction: column;
   align-items: center;
+  min-height: 100vh;
+
+  @include responsive(mobile-cat) {
+    display: none;
+  }
   
   .under_320_contents {
     text-align: center;
 
-    @include responsive(mobile-cat) {
-      display: none;
-    }
 
     h2 {
-      font-size: calc(10px + 1vw);
+      font-size: calc(2px + 10vw);
       color: $identity;
     }
 
     .img_320 {
       width: 50%;
       margin: 0 auto;
+      transform: translateX(10%);
 
       img {
         display: block;
         width: 100%;
+        margin-top: 15px;
       }
 
     }
 
     p {
-      font-size: calc(8px + 1vw);
+      font-size: calc(2px + 6vw);
       color: white;
+      line-height: 1.5em;
+      margin-top: 20px;
     }
   }
 
