--- a/css/animation.css
+++ b/css/animation.css
@@ -3,6 +3,23 @@
 /*=================톤앤매너=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
+@keyframes header_logo {
+  0% {
+    transform: rotateZ(5deg);
+  }
+  25% {
+    transform: rotateZ(-5deg);
+  }
+  50% {
+    transform: rotateZ(5deg);
+  }
+  75% {
+    transform: rotateZ(15deg);
+  }
+  100% {
+    transform: rotateZ(5deg);
+  }
+}
 @keyframes cursor_blink {
   0% {
     opacity: 0;
@@ -25,17 +42,35 @@
     transform: translateY(0%);
   }
 }
-@keyframes line {
+@keyframes line1 {
   from {
     stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
-    @media screen and (min-width: 768px) {
-      stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
-    }
   }
   to {
     stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 0.07 * 3.1415926535);
-    @media screen and (min-width: 768px) {
-      stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
-    }
+  }
+}
+@keyframes line2 {
+  from {
+    stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
+  }
+  to {
+    stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
+  }
+}
+@keyframes line3 {
+  from {
+    stroke-dasharray: 301.592894736px;
+  }
+  to {
+    stroke-dashoffset: 21.1115026315px;
+  }
+}
+@keyframes line4 {
+  from {
+    stroke-dasharray: 402.123859648px;
+  }
+  to {
+    stroke-dashoffset: 28.1486701754px;
   }
 }
