--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 /*=================중단점=================*/
 $break-mobile: '320px';
+$break-450: '450px'; // 띄어쓰기 제거 전용
 $break-tablet: '768px';
 $break-semipc: '1200px'; 
 $break-hugepc: '1600px';
@@ -11,6 +12,10 @@ $identity: #e87d9e;
 $gray1: #9ea0a4;
 
 $html: #e54d26;
+
+$kopc: #e7a335;
+
+
 
 
 /*=================폰트패밀리=================*/
