--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,27 @@
 /*=================톤앤매너=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
+/*=================중단점=================*/
+/*=================톤앤매너=================*/
+/*=================폰트패밀리=================*/
+/*=================여백=================*/
+@keyframes header_logo {
+  0% {
+    transform: rotateZ(5deg);
+  }
+  25% {
+    transform: rotateZ(-5deg);
+  }
+  50% {
+    transform: rotateZ(5deg);
+  }
+  75% {
+    transform: rotateZ(15deg);
+  }
+  100% {
+    transform: rotateZ(5deg);
+  }
+}
 @keyframes cursor_blink {
   0% {
     opacity: 0;
@@ -39,10 +60,16 @@
 }
 @keyframes line {
   from {
-    stroke-dasharray: 502.65482456;
+    stroke-dasharray: calc((-20px + 30vw) * 0.8 * 3.1415926535);
+    @media screen and (min-width: 768px) {
+      stroke-dasharray: calc((-10px + 20vw) * 0.8 * 3.1415926535);
+    }
   }
   to {
-    stroke-dashoffset: 35.1858377192;
+    stroke-dashoffset: calc((-20px + 30vw) * 0.8 * 0.07 * 3.1415926535);
+    @media screen and (min-width: 768px) {
+      stroke-dashoffset: calc((-10px + 20vw) * 0.8 * 0.07 * 3.1415926535);
+    }
   }
 }
 header .header_flex {
