--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -292,3 +292,72 @@
         margin-top: 25px;
     }
 }
+
+@mixin ferris_wheel {
+    &:nth-child(1) {
+        top: 0%;
+        left: 50%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(2) {
+        top:15%;
+        left: 85%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(3) {
+        left: 100%;
+        top: 50%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(4) {
+        left: 85%;
+        top: 85%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(5) {
+        left: 50%;
+        top: 100%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(6) {
+        left: 15%;
+        top: 85%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(7) {
+        left: 0%;
+        top: 50%;
+        translate: -50% -50%;
+    }
+
+    &:nth-child(8) {
+        left: 15%;
+        top: 15%;
+        translate: -50% -50%;
+    }
+}
+
+@mixin button_hover {
+    transition: all 0.5s linear;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100%;
+    left: -100%;
+}
+
+@mixin button_letter_hover {
+    color: #000620;
+    &::after {
+        left: 0%;
+    }
+}
