--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,3 +65,12 @@ $large_margin_t: 200px;
 $large_margin_s: 250px;
 $large_margin_h: 300px;
 
+$large_margin_p: 150px;
+$large_margin_t: 200px;
+$large_margin_s: 250px;
+$large_margin_h: 300px;
+
+$grand_magin_p: 200px;
+$grand_magin_t: 250px;
+$grand_magin_s: 300px;
+$grand_magin_s: 350px;
