--- a/scss/header.scss
+++ b/scss/header.scss
@@ -109,6 +109,7 @@ header {
                     display: flex;
                     justify-content: space-between;
                     align-items: center;
+                    font-weight: bold;
     
                     @include responsive(tablet-cat) {
                         //
@@ -145,6 +146,7 @@ header {
                     display: flex;
                     justify-content: space-between;
                     margin-top: 6px;
+                    font-weight: bold;
     
                     @include responsive(tablet-cat) {
                         margin-top: 6px;
