--- a/css/mixin.css
+++ b/css/mixin.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
 /*=================중단점=================*/
 /*=================톤앤매너=================*/
+/*=================톤앤매너(스킬)=================*/
+/*=================svg 필터=================*/
 /*=================폰트패밀리=================*/
 /*=================여백=================*/
