--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,8 +4,6 @@
 @import './animation.scss';
 
 main {
-
-
     .rending {
 
     }
@@ -2219,14 +2217,12 @@ main {
             }
         }
 
-        .proj_web {
+        .projs {
             @include nyan_mid_margin;
 
             &>div {
-                &:nth-child(n+2) {
-                    @include nyan_large_margin;
-
-                }
+                @include proj_margin;
+                @include proj_flex_order;
 
                 .proj_flex {
                     display: flex;
@@ -2273,67 +2269,12 @@ main {
     
                         img.proj_nyanbal {
                             position: absolute;
-                            width: 30%;
-                            left: 50%;
-                            top: 50%;
-                            rotate: 120deg;
                             transform-origin: center top;
-    
-                            @include responsive(tablet-cat) {
-                                width: 30%;
-                                top: 50%;
-                            }
-    
-                            @include responsive(semi-cat) {
-                                width: 30%;
-                            }
-            
-                            @include responsive(huge-cat) {
-                                //
-                            }
                         }
     
                         img.proj_back {
-                            width: 140%;
                             position: absolute;
-                            top: -10%;
-                            left: -20%;
                             z-index: -2;
-    
-                            @include responsive(tablet-cat) {
-                                top: -4%;
-                                left: -25%;
-                            }
-    
-                            @include responsive(semi-cat) {
-                                width: 150%;
-                                top: -10%;
-                                left: -40%;
-                            }
-            
-                            @include responsive(huge-cat) {
-                                top: -10%;
-                            }
-    
-                            
-    
-                            &:last-child {
-                                top: -5%;
-    
-                                @include responsive(tablet-cat) {
-                                    top: 0%;
-                                    left: -20%;
-                                }
-        
-                                @include responsive(semi-cat) {
-                                    left: -35%;
-                                }
-                
-                                @include responsive(huge-cat) {
-                                    top: -0;
-                                }
-        
-                            }
                         }
                     }
     
@@ -2658,153 +2599,33 @@ main {
                     }
                 }
 
-                &:nth-child(2) {
-
-                    .proj_photo {
-    
-                        img.proj_nyanbal {
-                            position: absolute;
-                            width: 30%;
-                            left: 50%;
-                            top: 50%;
-                            rotate: 120deg;
-                            transform-origin: center top;
-    
-                            @include responsive(tablet-cat) {
-                                width: 30%;
-                                top: 50%;
-                            }
-    
-                            @include responsive(semi-cat) {
-                                width: 30%;
-                            }
-            
-                            @include responsive(huge-cat) {
-                                //
-                            }
-                        }
-    
-                        img.proj_back {
-                            width: 140%;
-                            position: absolute;
-                            top: -10%;
-                            left: -20%;
-                            z-index: -2;
-    
-                            @include responsive(tablet-cat) {
-                                top: -4%;
-                                left: -25%;
-                            }
-    
-                            @include responsive(semi-cat) {
-                                width: 150%;
-                                top: -10%;
-                                left: -40%;
-                            }
-            
-                            @include responsive(huge-cat) {
-                                top: -10%;
-                            }
-    
-                            
-    
-                            &:last-child {
-                                top: -5%;
-    
-                                @include responsive(tablet-cat) {
-                                    top: 0%;
-                                    left: -20%;
-                                }
-        
-                                @include responsive(semi-cat) {
-                                    left: -35%;
-                                }
-                
-                                @include responsive(huge-cat) {
-                                    top: -0;
-                                }
-        
-                            }
-                        }
-                    }
-
-                    .proj_contents {
-    
-                        .proj_info {
-    
-                            width: 100%;
-    
-                            .proj_detail {
-    
-                                    p {
-    
-                                        .info_highlight {
-                                            color: $kopc;
-                                        }
-                                    }
-                                }
-    
-                                .info_tone {
-                                    .tone_flex {
-                                        .tone_cat {
-                                            &:nth-child(1) {
-                                                img {
-                                                    filter: invert(63%) sepia(83%) saturate(371%) hue-rotate(356deg) brightness(92%) contrast(97%);
-                                                }
-                                            }
-                                            &:nth-child(2) {
-                                                img {
-                                                    filter: invert(17%) sepia(10%) saturate(0%) hue-rotate(235deg) brightness(103%) contrast(94%);
-    
-                                                }
-                                            }
-                                            &:nth-child(3) {
-                                                img {
-                                                    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(336deg) brightness(101%) contrast(101%);
-    
-                                                }
-                                            }
-                                        }
-                                    }                               
-                                }
-                            }
-
-                            .info_btn_grp {
-    
-                                &>button {
-
-                                    background-color: $kopc;
-                                    border: 3px solid $kopc;    
-                                    color: $kopc;
-
-                                    &:hover {
-                                    }
-    
-                                    &::after {
-
-                                        background-color: $kopc;
-                                    }
-    
-                                }
-    
-                            }
-    
-    
-                        }
-                    }
-                }
-
+                @include proj_back_img;
 
             }
 
+            .proj_kopc {
+                .proj_contents {
+                    @include proj_common_contents($kopc, $kopc_f1, $kopc_f2, $kopc_f3)
+                }
+            }
+
+            .proj_FAHotel {
+                .proj_contents {
+                    @include proj_common_contents($FAHotel, $FAHotel_f1, $FAHotel_f2, $FAHotel_f3)
+                }
+            }
 
         }
 
 
-
     }
+
+
+
+    
 
     .main_contactme {
         height: 1000px;
         background-color: rgb(226, 223, 0);
     }
+}
