--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,10 +11,25 @@ $background: #000620;
 $identity: #e87d9e;
 $gray1: #9ea0a4;
 
+/*=================톤앤매너(스킬)=================*/
 $html: #e54d26;
+/*=================svg 필터=================*/
 
+//웹페이지(고보협)
 $kopc: #e7a335;
+$kopc_f1: invert(63%) sepia(83%) saturate(371%) hue-rotate(356deg) brightness(92%) contrast(97%);
+$kopc_f2: invert(17%) sepia(10%) saturate(0%) hue-rotate(235deg) brightness(103%) contrast(94%);
+$kopc_f3: invert(100%) sepia(100%) saturate(0%) hue-rotate(336deg) brightness(101%) contrast(101%);
 
+$FAHotel: #c3dded;
+$FAHotel_f1: invert(99%) sepia(32%) saturate(313%) hue-rotate(323deg) brightness(103%) contrast(99%);
+$FAHotel_f2: invert(15%) sepia(19%) saturate(1616%) hue-rotate(353deg) brightness(103%) contrast(92%);
+$FAHotel_f3: invert(9%) sepia(94%) saturate(5860%) hue-rotate(359deg) brightness(87%) contrast(110%);
+$FAHotel_f4: invert(5%) sepia(44%) saturate(7221%) hue-rotate(231deg) brightness(155%) contrast(112%);
+$FAHotel_f5: invert(27%) sepia(84%) saturate(2118%) hue-rotate(39deg) brightness(101%) contrast(101%);
+
+
+//웹페이지(페어몬트)
 
 
 
