--- a/css/index.css
+++ b/css/index.css
@@ -2974,7 +2974,6 @@ main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_deta
 }
 main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail > div p .info_highlight {
   font-size: calc(10vw + 4px);
-  color: #e7a335;
 }
 @media screen and (min-width: 768px) {
   main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail > div p .info_highlight {
@@ -3022,15 +3021,6 @@ main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_deta
 main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail .info_tone .tone_flex .tone_cat {
   margin: 0 auto;
   width: 33.3333333333%;
-}
-main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail .info_tone .tone_flex .tone_cat:nth-child(1) img {
-  filter: invert(63%) sepia(83%) saturate(371%) hue-rotate(356deg) brightness(92%) contrast(97%);
-}
-main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail .info_tone .tone_flex .tone_cat:nth-child(2) img {
-  filter: invert(17%) sepia(10%) saturate(0%) hue-rotate(235deg) brightness(103%) contrast(94%);
-}
-main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail .info_tone .tone_flex .tone_cat:nth-child(3) img {
-  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(336deg) brightness(101%) contrast(101%);
 }
 main .main_projects .projs > div .proj_flex .proj_contents .proj_info .proj_detail .info_tone .tone_flex .tone_cat img {
   width: 75%;
@@ -3092,19 +3082,13 @@ main .main_projects .projs > div .proj_flex .proj_contents .proj_info .info_btn_
   position: relative;
   font-family: "ImcreSoojin";
   width: 47.5%;
+  border-width: 2px;
+  border-style: solid;
   text-align: center;
-  background-color: #e7a335;
   border-radius: 1000px;
-  border: 3px solid #e7a335;
   overflow: hidden;
-  color: #e7a335;
   background-color: transparent;
   transition: all 0.5s linear;
-}
-@media screen and (min-width: 768px) {
-  main .main_projects .projs > div .proj_flex .proj_contents .proj_info .info_btn_grp > button {
-    border-width: 2px;
-  }
 }
 @media screen and (min-width: 1200px) {
   main .main_projects .projs > div .proj_flex .proj_contents .proj_info .info_btn_grp > button {
@@ -3133,7 +3117,6 @@ main .main_projects .projs > div .proj_flex .proj_contents .proj_info .info_btn_
   width: 100%;
   height: 100%;
   left: -100%;
-  background-color: #e7a335;
 }
 main .main_projects .projs > div .proj_flex .proj_contents .proj_info .info_btn_grp > button p {
   font-size: calc(4px + 4vw);
@@ -3212,10 +3195,10 @@ main .main_projects .projs > div:nth-child(2) .proj_photo img.proj_nyanbal {
   left: 20%;
   top: 45%;
   rotate: -110deg;
+  width: 30%;
 }
 @media screen and (min-width: 768px) {
   main .main_projects .projs > div:nth-child(2) .proj_photo img.proj_nyanbal {
-    width: 30%;
     top: 50%;
   }
 }
@@ -3271,13 +3254,13 @@ main .main_projects .projs > div:nth-child(2) .proj_photo img.proj_back:last-chi
   }
 }
 main .main_projects .projs > div:nth-child(3) .proj_photo img.proj_nyanbal {
+  width: 30%;
   left: 45%;
   top: 35%;
   rotate: 60deg;
 }
 @media screen and (min-width: 768px) {
   main .main_projects .projs > div:nth-child(3) .proj_photo img.proj_nyanbal {
-    width: 30%;
     top: 35%;
   }
 }
@@ -3347,7 +3330,7 @@ main .main_projects .projs .proj_kopc .proj_contents .proj_info .info_tone .tone
 }
 main .main_projects .projs .proj_kopc .proj_contents .info_btn_grp > button {
   background-color: #e7a335;
-  border: 3px solid #e7a335;
+  border-color: #e7a335;
   color: #e7a335;
 }
 main .main_projects .projs .proj_kopc .proj_contents .info_btn_grp > button::after {
@@ -3357,23 +3340,272 @@ main .main_projects .projs .proj_FAHotel .proj_contents .proj_info .proj_detail 
   color: #c3dded;
 }
 main .main_projects .projs .proj_FAHotel .proj_contents .proj_info .info_tone .tone_flex .tone_cat:nth-child(1) img {
-  filter: invert(99%) sepia(32%) saturate(313%) hue-rotate(323deg) brightness(103%) contrast(99%);
+  filter: invert(100%) sepia(62%) saturate(637%) hue-rotate(304deg) brightness(108%) contrast(99%);
 }
 main .main_projects .projs .proj_FAHotel .proj_contents .proj_info .info_tone .tone_flex .tone_cat:nth-child(2) img {
-  filter: invert(15%) sepia(19%) saturate(1616%) hue-rotate(353deg) brightness(103%) contrast(92%);
+  filter: invert(16%) sepia(38%) saturate(744%) hue-rotate(354deg) brightness(97%) contrast(95%);
 }
 main .main_projects .projs .proj_FAHotel .proj_contents .proj_info .info_tone .tone_flex .tone_cat:nth-child(3) img {
-  filter: invert(9%) sepia(94%) saturate(5860%) hue-rotate(359deg) brightness(87%) contrast(110%);
+  filter: none;
 }
 main .main_projects .projs .proj_FAHotel .proj_contents .info_btn_grp > button {
   background-color: #c3dded;
-  border: 3px solid #c3dded;
+  border-color: #c3dded;
   color: #c3dded;
 }
 main .main_projects .projs .proj_FAHotel .proj_contents .info_btn_grp > button::after {
   background-color: #c3dded;
 }
+main .main_projects .projs .proj_kidcat .proj_contents .proj_info .proj_detail p .info_highlight {
+  color: #e87d9e;
+}
+main .main_projects .projs .proj_kidcat .proj_contents .proj_info .info_tone .tone_flex .tone_cat:nth-child(1) img {
+  filter: invert(64%) sepia(55%) saturate(640%) hue-rotate(299deg) brightness(96%) contrast(89%);
+}
+main .main_projects .projs .proj_kidcat .proj_contents .proj_info .info_tone .tone_flex .tone_cat:nth-child(2) img {
+  filter: none;
+}
+main .main_projects .projs .proj_kidcat .proj_contents .proj_info .info_tone .tone_flex .tone_cat:nth-child(3) img {
+  filter: none;
+}
+main .main_projects .projs .proj_kidcat .proj_contents .info_btn_grp > button {
+  background-color: #e87d9e;
+  border-color: #e87d9e;
+  color: #e87d9e;
+}
+main .main_projects .projs .proj_kidcat .proj_contents .info_btn_grp > button::after {
+  background-color: #e87d9e;
+}
+main .main_projects .projs .proj_kidcat .proj_contents .tone_cat {
+  margin: 0 auto;
+  width: 50% !important;
+}
 main .main_contactme {
-  height: 1000px;
-  background-color: rgb(226, 223, 0);
+  margin-top: 150px;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme {
+    margin-top: 200px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme {
+    margin-top: 250px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme {
+    margin-top: 300px;
+  }
+}
+main .main_contactme .main_h2 .nyan_zone_h2 {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 {
+    flex-direction: row;
+  }
+}
+main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area {
+  position: relative;
+  width: calc(15px + 3vw);
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area {
+    margin: 0;
+    width: calc(30px + 2vw);
+    height: calc(20px + 2vw);
+    margin-right: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area {
+    width: 50px;
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area {
+    width: 60px;
+    height: 48px;
+  }
+}
+main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    margin: 0;
+    position: absolute;
+    width: 40%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    width: 20px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img {
+    width: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(1) {
+    bottom: 0;
+  }
+}
+main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(2) {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(2) {
+    display: block;
+    left: 45%;
+    transform: translateX(-50%);
+  }
+}
+main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(3) {
+  display: none;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_trace_area > img:nth-child(3) {
+    display: block;
+    right: 0%;
+    top: 60%;
+    transform: translateY(-50%);
+  }
+}
+main .main_contactme .main_h2 .nyan_zone_h2 .title_text_area h2 {
+  text-align: center;
+  font-size: calc(16px + 2vw);
+  margin-top: 7px;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    margin-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    font-size: 36px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .main_h2 .nyan_zone_h2 .title_text_area h2 {
+    font-size: 40px;
+  }
+}
+main .main_contactme .cm_flex {
+  margin-top: 120px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .cm_flex {
+    margin-top: 150px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .cm_flex {
+    margin-top: 180px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .cm_flex {
+    margin-top: 200px;
+  }
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .cm_flex {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+main .main_contactme .cm_flex .cm_img_area {
+  position: relative;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .cm_flex .cm_img_area {
+    width: 30%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .cm_flex .cm_img_area {
+    width: 480px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .cm_flex .cm_img_area {
+    width: 680px;
+  }
+}
+main .main_contactme .cm_flex .cm_img_area img:first-child {
+  position: relative;
+  display: block;
+  width: 40%;
+  margin: 0 auto;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .cm_flex .cm_img_area img:first-child {
+    width: 90%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .cm_flex .cm_img_area img:first-child {
+    width: 320px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .cm_flex .cm_img_area img:first-child {
+    width: 400px;
+  }
+}
+main .main_contactme .cm_flex .cm_img_area img:nth-child(2) {
+  position: absolute;
+  top: -24%;
+  left: 34%;
+  width: 55%;
+  rotate: -5deg;
+  transform-origin: bottom center;
+  animation: header_gnb_mobile 5s linear infinite;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .cm_flex .cm_img_area img:nth-child(2) {
+    width: 100%;
+    top: -3%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .cm_flex .cm_img_area img:nth-child(2) {
+    width: 440px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .cm_flex .cm_img_area img:nth-child(2) {
+    width: 550px;
+  }
+}
+main .main_contactme .cm_flex .cm_contents_area {
+  position: relative;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  main .main_contactme .cm_flex .cm_contents_area {
+    width: 60%;
+  }
+}
+@media screen and (min-width: 1200px) {
+  main .main_contactme .cm_flex .cm_contents_area {
+    width: 580px;
+  }
+}
+@media screen and (min-width: 1600px) {
+  main .main_contactme .cm_flex .cm_contents_area {
+    width: 780px;
+  }
 }
